# cider-listen-together

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  appcast.xml
.github/workflows/: build.yml  release-macos.yml  release-windows.yml
apps/macos/CiderTogether/CiderTogether/: CiderTogether-Bridging-Header.h  CiderTogetherApp.swift  Info.plist  cider_coreFFI.h
apps/macos/CiderTogether/CiderTogether.xcodeproj/: project.pbxproj
apps/macos/CiderTogether/CiderTogether/Bridge/: cider_core.swift  cider_coreFFI.h  cider_coreFFI.modulemap
apps/macos/CiderTogether/CiderTogether/Models/: AppState.swift
apps/macos/CiderTogether/CiderTogether/Updater/: UpdaterController.swift
apps/macos/CiderTogether/CiderTogether/Views/: AboutView.swift  AcknowledgmentsView.swift  ContentView.swift  DebugView.swift  HomeView.swift  MenuBarView.swift  NowPlayingCard.swift  RoomView.swift
apps/windows/CiderTogether/CiderTogether/: CiderTogether.slnx
apps/windows/CiderTogether/CiderTogether/CiderTogether/: App.xaml  App.xaml.cs  CiderTogether.csproj  MainWindow.xaml  MainWindow.xaml.cs  (+2 more)
cider-core/: Cargo.toml
cider-core/src/: latency.rs  lib.rs  seek_calibrator.rs
cider-core/src/cider/: client.rs  mod.rs  types.rs
cider-core/src/ffi/: handlers.rs  mod.rs  session.rs  types.rs
cider-core/src/network/: behaviour.rs  mod.rs  room_code.rs  signaling.rs
cider-core/src/sync/: mod.rs  protocol.rs  state.rs
docs/diagrams/: build-pipeline.mmd  component-architecture.mmd  connection-flow.mmd  libp2p-stack.mmd  peer-discovery.mmd  playback-sync.mmd  relay-server.mmd
relay-server/: Cargo.toml
relay-server/deploy/: cider-relay.service  install.sh
relay-server/src/: dashboard.rs  main.rs  metrics.rs  network.rs
website/: package.json  vite.config.ts
website/src/: app.css
website/src/routes/: +layout.svelte  +page.svelte
website/src/routes/sitemap.xml/: +server.ts
website/static/: robots.txt
(+21 files in other folders)
